--- a/css/detail.css
+++ b/css/detail.css
@@ -18,6 +18,15 @@
     top: 200px;
 }
 
+.robot-gameplay {
+    left: -700px;
+    top: -190px;
+}
+.human-gameplay {
+    right: -750px;
+    top: -190px;
+}
+
 h1 {
     color: #FFF;
     text-align: center;
@@ -28,6 +37,38 @@ h1 {
     -webkit-text-stroke-color: #000;
     font-family: "Seymour One";
     font-size: 2rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+h2 {
+    color: #FFF;
+    text-align: center;
+
+    /* 1 */
+    text-shadow: 4px 4px 0px #000;
+    -webkit-text-stroke-width: 2;
+    -webkit-text-stroke-color: #000;
+    font-family: "Seymour One";
+    font-size: 96px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -9.6px;
+}
+
+button#continue {
+    border: 2px solid #000;
+    background: #FFF;
+    box-shadow: 4px -7px 0px 0px #C2C2C2 inset, 4px 4px 0px 0px #000;
+
+    width: 204px;
+    height: 63px;
+    flex-shrink: 0;
+    color: #000;
+    font-family: 'Shrikhand';
+    font-size: 32px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -126,3 +167,6 @@ h1 {
     cursor: pointer;
 }
 
+#continue:hover {
+    cursor: pointer;
+}
