--- a/css/general.css
+++ b/css/general.css
@@ -42,6 +42,15 @@ body {
     gap: 1rem;
 }
 
+#result {
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+
+    display: none;
+}
+
 #hands {
     position: relative;
     z-index: -1;
