--- a/css/general.css
+++ b/css/general.css
@@ -9,6 +9,7 @@
 
 body {
     background-color: #9DCAFF;
+    overflow: hidden;
 }
 
 #credit {
@@ -24,7 +25,7 @@ body {
 
     padding: 3rem;
 
-    height: 70vh;
+    height: 80vh;
 }
 
 .score-display {
@@ -53,9 +54,11 @@ body {
 
 #hands {
     position: relative;
-    z-index: -1;
 }
 
 #hands img {
     position: absolute;
+    z-index: -1;
+
+    overflow-x: hidden;
 }
